Enabled project specific settings and performed code formatting